--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
 			</extension>
 		</extensions>
 	</build>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.sun.codemodel</groupId>
+			<artifactId>codemodel</artifactId>
+			<version>2.4</version>
+		</dependency>
+	</dependencies>
 
 	<distributionManagement>
 		<repository>
