--- a/maveneclipse/pom.xml
+++ b/maveneclipse/pom.xml
@@ -15,6 +15,18 @@
 			<version>2.2.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.androidannotations</groupId>
+			<artifactId>androidannotations</artifactId>
+			<version>1.0.3</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.androidannotations</groupId>
+			<artifactId>androidannotations</artifactId>
+			<classifier>api</classifier>
+			<version>1.0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -47,4 +59,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>androidannotations-repository</id>
+			<name>androidannotations Maven2 repository</name>
+			<url>http://androidannotations.googlecode.com/svn/repository/</url>
+		</repository>
+	</repositories>
 </project>
