--- a/maveneclipse/pom.xml
+++ b/maveneclipse/pom.xml
@@ -48,14 +48,35 @@
 				</configuration>
 				<extensions>true</extensions>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
+					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.bsc.maven</groupId>
+				<artifactId>maven-processor-plugin</artifactId>
+				<version>1.3.4</version>
+				<executions>
+					<execution>
+						<id>process</id>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<phase>generate-sources</phase>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.googlecode.androidannotations</groupId>
+						<artifactId>androidannotations</artifactId>
+						<version>1.0.3</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
@@ -67,4 +88,17 @@
 			<url>http://androidannotations.googlecode.com/svn/repository/</url>
 		</repository>
 	</repositories>
+
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>maven-annotation-plugin-repo</id>
+			<url>http://maven-annotation-plugin.googlecode.com/svn/trunk/mavenrepo</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>androidannotations-repository</id>
+			<name>androidannotations Maven2 repository</name>
+			<url>http://androidannotations.googlecode.com/svn/repository/</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
