--- a/AndroidAnnotations/pom.xml
+++ b/AndroidAnnotations/pom.xml
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>com.sun.codemodel</groupId>
 			<artifactId>codemodel</artifactId>
-			<version>2.4</version>
+			<version>2.5-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
