--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 		<dependency>
 			<groupId>com.sun.codemodel</groupId>
 			<artifactId>codemodel</artifactId>
-			<version>2.5-SNAPSHOT</version>
+			<version>2.5-FROZEN-AA</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -114,6 +114,10 @@
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net Repository for Maven</name>
 			<url>http://download.java.net/maven/2/</url>
+		</repository>
+		<repository>
+			<id>custom-codemodel-releases</id>
+			<url>http://androidannotations.googlecode.com/svn/repository/releases</url>
 		</repository>
 	</repositories>
 
