--- a/maveneclipse/AndroidManifest.xml
+++ b/maveneclipse/AndroidManifest.xml
@@ -3,7 +3,7 @@
   package="com.googlecode.androidannotations.maveneclipse" android:versionCode="1" android:versionName="0.0.1-SNAPSHOT">
 
   <application android:icon="@drawable/icon" android:label="@string/app_name">
-    <activity android:name=".HelloAndroidActivity">
+    <activity android:name=".HelloAndroidActivity_">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
