--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.androidannotations</groupId>
 	<artifactId>androidannotations</artifactId>
-	<version>2.1-SNAPSHOT</version>
+	<version>2.0.1</version>
 	<packaging>jar</packaging>
 	<name>Android Annotations</name>
 	<description>Simplifying Android using annotations and annotation processing tools</description>
@@ -129,9 +129,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:svn:https://androidannotations.googlecode.com/svn/trunk/AndroidAnnotations</connection>
-		<developerConnection>scm:svn:https://androidannotations.googlecode.com/svn/trunk/AndroidAnnotations</developerConnection>
-		<url>https://androidannotations.googlecode.com/svn/trunk/AndroidAnnotations</url>
+		<connection>scm:svn:https://androidannotations.googlecode.com/svn/tags/androidannotations-2.0.1</connection>
+		<developerConnection>scm:svn:https://androidannotations.googlecode.com/svn/tags/androidannotations-2.0.1</developerConnection>
+		<url>https://androidannotations.googlecode.com/svn/tags/androidannotations-2.0.1</url>
 	</scm>
 
 	<repositories>
