--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -9,6 +9,7 @@
 		<activity android:name=".EmptyActivityWithoutLayout_" />
 		<activity android:name=".ViewsInjectedActivity_" />
 		<activity android:name=".ClicksHandledActivity_" />
+		<activity android:name=".ActivityWithServices_" />
 
 	</application>
 
