--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	package="com.googlecode.androidannotations.test15" android:versionCode="1"
 	android:versionName="2.1-SNAPSHOT">
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".CustomApplication">
 
 		<activity android:name=".EmptyActivityWithLayout_" />
 		<activity android:name=".EmptyActivityWithoutLayout_" />
@@ -11,6 +11,8 @@
 		<activity android:name=".ClicksHandledActivity_" />
 		<activity android:name=".ActivityWithServices_" />
         <activity android:name=".ExtraInjectedActivity_" />
+        <activity android:name=".ApplicationInjectedActivity_" />
+        
 
 	</application>
 
