--- a/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
+++ b/AndroidAnnotations/functional-test-1-5/AndroidManifest.xml
@@ -19,19 +19,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.androidannotations.test15"
     android:versionCode="1"
-    android:versionName="2.1-SNAPSHOT" >
+    android:versionName="2.1-SNAPSHOT" xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk
         android:minSdkVersion="3"
-        android:targetSdkVersion="8" />
+        android:targetSdkVersion="16" tools:ignore="OldTargetApi"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="org.androidannotations.test15.roboguice.SampleRoboApplication_"
-        android:debuggable="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:debuggable="true" >
         <activity android:name="org.androidannotations.test15.eviewgroup.CustomFrameLayoutActivity_" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
