--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: android
 android:
   components:
-    - build-tools-19.1
     - android-14
+  licenses:
+    - android-sdk-license-5be876d5
 script:
   - mvn -f AndroidAnnotations/pom.xml install
   - mvn -f examples/maveneclipse/pom.xml install
