--- a/AndroidAnnotations/androidannotations-roboguice/roboguice-api/pom.xml
+++ b/AndroidAnnotations/androidannotations-roboguice/roboguice-api/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<artifactId>androidannotations-roboguice</artifactId>
 		<groupId>org.androidannotations</groupId>
-		<version>4.5.0</version>
+		<version>4.6.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>roboguice-api</artifactId>
