--- a/AndroidAnnotations/androidannotations-rest-spring/rest-spring/pom.xml
+++ b/AndroidAnnotations/androidannotations-rest-spring/rest-spring/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.androidannotations</groupId>
 		<artifactId>androidannotations-rest-spring</artifactId>
-		<version>4.5.2</version>
+		<version>4.6.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rest-spring</artifactId>
